package lapr4.integrations.dronelanguageplugin.repositories;

import eapli.framework.domain.repositories.DomainRepository;
import lapr4.integrations.dronelanguageplugin.domain.DroneLanguagePlugin;
import lapr4.integrations.dronelanguageplugin.domain.DroneLanguageVersion;

public interface DroneLanguagePluginRepository extends DomainRepository<DroneLanguageVersion, DroneLanguagePlugin> {

}
